--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "dom": "^0.0.3",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
